# GeoDataScience

./: .gitignore  main.py  pyproject.toml
Notebooks/: DC_Crashes.ipynb  WashingtonDCCensus.ipynb  WashingtonDCCensusData.geojson  crash_heatmap_interactive.html  epidemiological_heatmap_time_series.html  folium_heatmaps.ipynb  ipyleaflet_tutorial.ipynb  metadata.json
