[project]
name = "geodatascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geemap>=0.36.4",
    "geopandas>=1.1.1",
    "geoplot>=0.5.1",
    "ipykernel>=6.30.1",
    "ipyleaflet>=0.20.0",
    "mapclassify>=2.10.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pysal>=25.7",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]
